<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="15dp"
        android:text="@string/quizPoint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_below="@id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearQuestionI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quiz2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioQ1True"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stOTrue"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radioQ1False"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stOFalse"
                        android:textSize="16sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/linearQuestionII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quiz1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quiz2sub"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <CheckBox
                    android:id="@+id/checkboxQ2Opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stCreate"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkboxQ2Opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stDraw"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkboxQ2Opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stClick"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkboxQ2Opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stStart"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkboxQ2Opt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stPause"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/submit" />

    </LinearLayout>


</RelativeLayout>